--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-  "name": "my-app",
+  "name": "de-faker-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/history": "^4.7.2",
     "@types/jest": "24.0.12",
     "@types/node": "11.13.8",
     "@types/react": "16.8.14",
     "@types/react-dom": "16.8.4",
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.2",
+    "mobx": "^5.9.4",
+    "mobx-persist": "^0.4.1",
+    "mobx-react": "^5.4.3",
+    "mobx-react-router": "^4.0.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "typescript": "3.4.5"
   },
