--- a/package.json
+++ b/package.json
@@ -3,13 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/history": "^4.7.2",
-    "@types/jest": "24.0.12",
-    "@types/node": "11.13.8",
-    "@types/react": "16.8.14",
-    "@types/react-dom": "16.8.4",
-    "@types/react-router": "^4.4.5",
-    "@types/react-router-dom": "^4.3.2",
+    "faker": "Marak/faker.js#master",
     "mobx": "^5.9.4",
     "mobx-persist": "^0.4.1",
     "mobx-react": "^5.4.3",
@@ -42,5 +36,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/faker": "^4.1.5",
+    "@types/history": "^4.7.2",
+    "@types/jest": "24.0.12",
+    "@types/node": "11.13.8",
+    "@types/react": "16.8.14",
+    "@types/react-dom": "16.8.4",
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.2"
   }
 }
